syntax = "proto3";
package hello;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

// Hello
message HelloRequest { string text = 1; }
message HelloResponse {
  string response = 1;
  google.protobuf.Timestamp date = 11;
}

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse) {};
}
